nav repere maj2

--- a/repere.html
+++ b/repere.html
@@ -11,18 +11,30 @@
         <h2>tablette</h2>
         <h3>mobile</h3>
 
+        <span class="s0">|<br>50px</span>
+        <span class="s1">|<br>100px</span>
+        <span class="s2">|<br>250px</span>
+        <span class="s3">|<br>500px</span>
+        <span class="s4">|<br>800px</span>
+        <span class="s5">|<br>380px</span>
+        <span class="s6">|<br>1200px</span>
+        <span class="s7">|<br>1400px</span>
+        <span class="s8">|<br>1920px</span>
+        <span class="s9">|<br>1850px</span>
+
             <!-- repere css -->
  <div>
      <div id="pts-css1">X</div>
      <div id="pts-css2">Y</div>
      
-     <div id="pts-css10">ecran grand 1440px x 900px</div>
-     <div id="pts-css9">ecran standard 1200px x 800px</div>
+     <div id="pts-css11">ecran grand 1920px x 1080px</div>
+     <div id="pts-css10">ecran standard2 1440px x 900px</div>
+     <div id="pts-css9">ecran standard1 1200px x 800px</div>
      <div id="pts-css8">ecran petit 992px x 600px</div>
      <div id="pts-css7">tablette grand 820px x 1180px</div>
      <div id="pts-css6">tablette standard 768px x 1024px</div>
      <div id="pts-css5">mobile grand 414px x 736px</div>
-     <div id="pts-css4">mobile standard 375px x 667px</div>
+     <div id="pts-css4">mobile standard 375px x 667px (moi)</div>
      <div id="pts-css3">mobile petit 320px x 568px</div>
 
 
