--- a/repere.html
+++ b/repere.html
@@ -14,12 +14,12 @@
         <span class="s0">|<br>300px</span>
         <span class="s1">|<br>100px</span>
         <span class="s2">|<br>200px</span>
-        <span class="s3">|<br>500px</span>
+        <span class="s3">|<br>490px <br>S20FE paysage</span>
         <span class="s4">|<br>840px</span>
-        <span class="s5">|<br>380px</span>
-        <span class="s6">|<br>1900px</span>
+        <span class="s5">|<br>380px <br>S20FE</span>
+        <span class="s6">|<br>1900px <br>my desktop</span>
         <span class="s7">|<br>1400px</span>
-        <span class="s8">|<br>1920px</span>
+        <span class="s8">|<br>1860px <br>my screen</span>
         <span class="s9">|<br>1700px</span>
 
             <!-- repere css -->
