nav repere maj6

--- a/repere.html
+++ b/repere.html
@@ -7,15 +7,20 @@
         <title>Document</title>
     </head>
     <body>
+        <br>
+        <br>
+        <br>
+        <br>
         <h1>ecran</h1>
         <h2>tablette</h2>
         <h3>mobile</h3>
+        <h4>moi</h4>
 
-        <span class="s0">|<br>300px</span>
-        <span class="s1">|<br>100px</span>
-        <span class="s2">|<br>200px</span>
+        <span class="s0">|<br>100px</span>
+        <span class="s1">|<br>300px</span>
+        <span class="s2">|<br>600px</span>
         <span class="s3">|<br>490px <br>S20FE paysage</span>
-        <span class="s4">|<br>840px</span>
+        <span class="s4">|<br>840px <br>V screen</span>
         <span class="s5">|<br>380px <br>S20FE</span>
         <span class="s6">|<br>1900px <br>my desktop</span>
         <span class="s7">|<br>1400px</span>
@@ -36,7 +41,10 @@
      <div id="pts-css5">mobile grand 414px x 736px</div>
      <div id="pts-css4">mobile standard 375px x 667px (moi)</div>
      <div id="pts-css3">mobile petit 320px x 568px</div>
-
+     <div id="pts-css14">mon tel 380px x 490px</div>
+     <div id="pts-css13">mon pc 1860px</div>
+     <div id="pts-css12">mon tower 1900px</div>
+     
 
      
 
