--- a/test.html
+++ b/test.html
@@ -4,11 +4,23 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="codeBase.css" />
         <link rel="stylesheet" href="test.css" />
+        <style>
+        #monBouton {
+            padding: 10px 20px;
+            font-size: 1rem;
+            background-color: lightblue; /* Couleur de base */
+            border: 1px solid blue;
+            transition: background-color 0.3s; /* Transition CSS pour un effet doux */
+        }
+    </style>
         <title>Document</title>
     </head>
     <body>
+        <div id="jsScript"></div>
+
+        <button id="monBouton">Passez la souris ici</button>
 
     </body>
+    <script src="exemple.js"></script>
 </html>
