--- a/branches.html
+++ b/branches.html
@@ -3798,6 +3798,38 @@
                                 </div>
                                 <div class="content">
 
+                                    <form action="/submit-form" method="post">
+
+                                        <label for="choix-fruit">Choisissez
+                                            votre fruit préféré :</label>
+
+                                        <select id="choix-fruit" name="fruit"
+                                            style="color: black;">
+
+                                            <option value disabled selected
+                                                style="color: black;">--
+                                                Sélectionnez une option
+                                                --</option>
+
+                                            <option value="pomme"
+                                                style="color: black;">Pomme
+                                                🍎</option>
+                                            <option value="banane"
+                                                style="color: black;">Banane
+                                                🍌</option>
+                                            <option value="orange"
+                                                style="color: black;">Orange
+                                                🍊</option>
+                                            <option value="kiwi"
+                                                style="color: black;">Kiwi
+                                                🥝</option>
+
+                                        </select>
+
+                                        <button type="submit">Soumettre</button>
+
+                                    </form>
+
                                     <p class="expli-pad">
                                         L'élément **&lt;select&gt;** est un
                                         **contrôle de formulaire** qui permet à
@@ -7454,6 +7486,9 @@
                                 </div>
 
                                 <div class="contentH">
+
+                                    <a href="java_ex.html"><button
+                                            class="js-e">exemple js</button></a>
 
                                     <div class="branchH" info="base">
                                         <div class="header"
