--- a/test.html
+++ b/test.html
@@ -4,47 +4,12 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <link rel="stylesheet" href="java_ex.css" />
-        <style>
-        #monBouton {
-            padding: 10px 20px;
-            font-size: 1rem;
-            background-color: lightblue; /* Couleur de base */
-            border: 1px solid blue;
-            transition: background-color 0.3s; /* Transition CSS pour un effet doux */
-        }
-    </style>
+        <link rel="stylesheet" href="" />
         <title>Document</title>
     </head>
 
     <body>
 
-        <header id="navbar">
-            <h1>Mon Site</h1>
-        </header>
-        <div style="height: 1000px;">
-            <h2>Faites défiler vers le bas !</h2>
-        </div>
-
-        <div class="content">
-
-            <div id="jsScript">
-
-                <button id="monBouton">Passez la souris ici</button>
-                <button id="monBouton2">double clic / clic droit</button>
-                <button id="monBouton3">appui / relache</button>
-                <br>
-                <br>
-                <button id="myKeyboard" style="width: 400px;">Clavier</button>
-                <button id="myKeyboard2" style="width: 400px;">Clavier</button>
-
-            </div>
-
-            <div class="visu-code">
-                <iframe src="exemple.js"></iframe>
-            </div>
-
-        </div>
     </body>
-    <script src="exemple.js"></script>
+    <script src=""></script>
 </html>
