--- a/branches.html
+++ b/branches.html
@@ -10310,6 +10310,47 @@
                                     <!-- **********fin**********code********** -->
                                 </div>
                             </div>
+
+                            <div class="branchH" id="php">
+                                <div class="header"
+                                    onclick="toggleBranch(this)">
+                                    <h2>PHP</h2>
+                                </div>
+
+                                <div class="contentH">
+
+                                    <a href="php.html"><button
+                                            class="js-e">exemple js</button></a>
+
+                                    <div class="branchH" info="base">
+                                        <div class="header"
+                                            onclick="toggleBranch(this)">
+                                            <h3>base</h3>
+                                        </div>
+                                        <div class="contentV">
+
+                                            <div class="branchV" info="vide">
+                                                <div class="header"
+                                                    onclick="toggleBranch(this)">
+                                                    <h5>vide</h5>
+                                                </div>
+                                                <div class="content">
+                                                    
+
+                                                </div>
+                                            </div>
+
+                                        </div>
+                                    </div>
+
+                                   
+
+
+                                    <!-- **********fin**********code********** -->
+                                </div>
+                            </div>
+
+
                             <!-- **********fin**********code********** -->
 
                             <!-- ********************************************************************** -->
